cmake_minimum_required(VERSION 3.16)
project(cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(codeforces codeforces.cpp)
add_executable(my_bst my_bst.cpp)
add_executable(my_avl my_avl.cpp)
add_executable(home_work home_work.cpp)
add_executable(functions functions.cpp)
add_executable(heap_sort heap_sort.cpp)
add_executable(b_tree b_tree.cpp DisjointSet.cpp)
add_executable(m1 m1.cpp)
add_executable(m2 m2.cpp)
add_executable(m3 m3.cpp)
add_executable(college college.cpp)
add_executable(combinatorics combinatorics.cpp)
add_executable(class_heap class_heap.cpp)
add_executable(class_BST class_BST.cpp)
add_executable(prim prim.cpp)
add_executable(kruskal kruskal.cpp)
add_executable(DisjointSet DisjointSet.cpp)
add_executable(leetcode leetcode.cpp)
